# QQuickGit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
qml/: BottomPageDrawer.qml  ErrorLabel.qml  GitCloneDrawer.qml  GitCommitDetailPanel.qml  GitDiscardDialog.qml  GitFontScale.qml  GitHistoryRow.qml  GitHistoryView.qml  GitMergeDrawer.qml  GitProgressDrawer.qml  GitWorkingTreePanel.qml  PersonEdit.qml  ProgressDrawer.qml  RefBadge.qml  TextFieldWithError.qml
src/: AbstractGitFutureWatcher.cpp  AbstractGitFutureWatcher.h  AbstractResultFutureWatcher.cpp  AbstractResultFutureWatcher.h  Account.cpp  Account.h  AccountSettingWatcher.cpp  AccountSettingWatcher.h  AuthorizedKeysModel.cpp  AuthorizedKeysModel.h  CommitDiffContext.h  GitCommitFileModel.cpp  GitCommitFileModel.h  GitCommitImageProvider.cpp  GitCommitImageProvider.h  GitCommitInfo.cpp  GitCommitInfo.h  GitConcurrent.cpp  GitConcurrent.h  GitDashedBorderItem.cpp  GitDashedBorderItem.h  GitFilePatch.cpp  GitFilePatch.h  GitFutureWatcher.cpp  GitFutureWatcher.h  GitGraphLaneItem.cpp  GitGraphLaneItem.h  GitGraphModel.cpp  GitGraphModel.h  GitLane.cpp  GitLane.h  GitLaneType.h  GitLanes.cpp  GitLanes.h  GitMergeFutureWatcher.cpp  GitMergeFutureWatcher.h  GitOidUtils.h  GitRemoteInfo.cpp  GitRemoteInfo.h  GitRemotesModel.cpp  (+33 more)
tests/: TestUtilities.cpp  TestUtilities.h  qquickgit-test-main.cpp  test_Account.cpp  test_GitCommitFileModel.cpp  test_GitCommitImageProvider.cpp  test_GitCommitInfo.cpp  test_GitConcurrent.cpp  test_GitFilePatch.cpp  test_GitFutureWatcher.cpp  test_GitGraphLaneRendering.cpp  test_GitGraphModel.cpp  test_GitLanes.cpp  test_GitRemotesModel.cpp  test_GitRepository.cpp  test_GitTestConnection.cpp  test_GitUtilities.cpp  test_GitWorkingTreeModel.cpp  test_Lfs.cpp  test_RSAKeyGenerator.cpp
tests/lfs/: LfsServer.cpp  LfsServer.h
